--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
 <h1>Prototype DFD</h1>
 <span>Digitizing orders</span>
 <input id="upload" type="file" multiple>
-<button id="submit">Analyse</button>
+<button id="submit" disabled>Analyse</button>
+<h2>Uploaded files</h2>
 <div id="files"></div>
+<h2>Reports</h2>
+<div id="reports"></div>
 </body>
 </html>
