Readd reports an print the search in the report

--- a/resource/index.html
+++ b/resource/index.html
@@ -12,6 +12,8 @@
     <button id="submit" disabled>Analyse</button>
     <h2>Uploaded files</h2>
     <ul id="files"></ul>
+    <h2>Reports</h2>
+    <ul id="reports"></ul>
 </div>
 </body>
 </html>
