--- a/resource/index.html
+++ b/resource/index.html
@@ -14,6 +14,7 @@
     <ul id="files"></ul>
     <h2>Reports</h2>
     <ul id="reports"></ul>
+    <button id="delete" class="bg-red-600 hover:bg-red-500 disabled:hover:bg-gray-400" disabled>Delete reports</button>
 </div>
 </body>
 </html>
